--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
 
 @layer base {
     header {
-        @apply z-10 fixed top-0 left-0 right-0 flex justify-between mx-auto w-full max-w-4xl p-10 bg-white bg-opacity-99;
+        @apply z-10 fixed top-0 left-0 right-0 flex justify-between mx-auto w-full max-w-4xl py-10 px-8 bg-white bg-opacity-99;
     }
     footer {
         @apply flex justify-between mx-auto w-full max-w-sm px-8 pt-8 pb-16 bg-white;
