--- a/styles/global.css
+++ b/styles/global.css
@@ -6,12 +6,6 @@
 @tailwind utilities;
 
 @layer base {
-    header {
-        @apply z-10 fixed top-0 left-0 right-0 flex justify-between mx-auto w-full max-w-4xl py-12 px-8 bg-white bg-opacity-99;
-    }
-    footer {
-        @apply flex justify-between mx-auto w-full max-w-sm px-8 pt-8 pb-16 bg-white;
-    }
     h1 {
         @apply text-5xl font-display font-bold mb-2;
     }
@@ -22,37 +16,16 @@
         @apply text-xl font-display font-bold mb-2 text-gray-900;
     }
     p {
-        @apply font-body text-gray-800 mb-8 font-light leading-relaxed;
+        @apply font-body text-gray-800 mb-8 font-thin text-lg leading-relaxed;
     }
     section {
         @apply my-4;
-    }
-    .avatar {
-        @apply w-5 h-5 rounded-full;
     }
     .frontmatter {
         @apply flex justify-between mb-16;
     }
     .frontmatter p {
         @apply text-sm text-gray-700 ml-2 mb-0;
-    }
-    .header-link {
-        @apply p-2 font-mono text-gray-900;
-    }
-    .header-link:hover {
-        @apply text-fire;
-    }
-    .card {
-        @apply mb-8;
-    }
-    .card h3 + p {
-        @apply mb-0;
-    }
-    .border-card {
-        @apply p-4 border-solid border rounded border-gray-400 mb-4;
-    }
-    .border-card p {
-        @apply mb-0;
     }
     .time-line {
         @apply w-48px flex-none justify-center;
