--- a/styles/global.css
+++ b/styles/global.css
@@ -1,28 +1,25 @@
-/* purgecss start ignore */
 @tailwind base;
 @tailwind components;
-/* purgecss end ignore */
-
 @tailwind utilities;
 
 @layer base {
     h1 {
-        @apply text-5xl font-display font-bold mb-2;
+        @apply text-5xl font-display font-bold mb-2 leading-tight;
     }
     h2 {
-        @apply text-4xl font-display font-bold mb-4;
+        @apply text-4xl font-display font-bold mb-4 leading-tight;
     }
     h3 {
-        @apply text-xl font-display font-bold mb-2 text-gray-900;
+        @apply text-xl font-display font-bold mb-2 text-gray-900 leading-tight;
     }
     p {
-        @apply font-body text-gray-800 mb-8 font-thin text-lg leading-relaxed;
+        @apply font-body text-gray-800 mb-8 font-thin leading-normal;
     }
     section {
         @apply my-4;
     }
     .frontmatter {
-        @apply flex justify-between mb-16;
+        @apply flex justify-between items-center mb-16;
     }
     .frontmatter p {
         @apply text-sm text-gray-700 ml-2 mb-0;
@@ -40,10 +37,10 @@
         @apply relative mb-8;
     }
     .year-event h3 {
-        @apply font-light;
+        @apply font-light leading-normal;
     }
     .event h3 {
-        @apply m-0 text-base;
+        @apply m-0 text-base leading-normal;
     }
     .event p {
         @apply m-0;
