--- a/styles/global.css
+++ b/styles/global.css
@@ -16,9 +16,9 @@
         @apply text-xl font-serif font-bold mb-2 text-gray-900 leading-tight;
     }
     p {
-        @apply font-sans text-gray-800 mb-8 font-thin text-lg leading-normal;
+        @apply font-sans text-gray-800 mb-8 text-lg leading-relaxed;
     }
-    a {
+    a, button {
         @apply text-lg font-normal;
     }
     li {
@@ -31,22 +31,22 @@
         @apply my-8;
     }
     pre {
-        @apply py-4 px-4 bg-gray-200 mb-8 rounded overflow-x-scroll;
+        @apply p-6 bg-gray-900 mb-8 rounded overflow-x-scroll;
     }
     code {
-        @apply px-1 bg-gray-200 rounded text-secondary font-sans font-normal;
+        @apply px-1 text-primary font-bold font-sans;
     }
     pre code {
-        @apply font-mono text-black p-0 text-sm;
+        @apply font-mono text-gray-300 p-0 leading-loose;
     }
     .remark-code-title {
-        @apply p-2 bg-gray-400;
+        @apply p-2 font-bold;
     }
     .frontmatter {
         @apply flex justify-between items-center mb-16;
     }
     .frontmatter p {
-        @apply text-sm text-gray-700 ml-2 mb-0;
+        @apply text-base text-gray-700 ml-2 mb-0;
     }
     .time-line {
         @apply w-48px flex-none justify-center;
@@ -61,16 +61,16 @@
         @apply relative mb-8;
     }
     .year-event h3 {
-        @apply font-light font-hsans leading-normal;
+        @apply font-light font-sans leading-normal;
     }
     .event h3 {
-        @apply m-0 text-lg font-hsans leading-normal;
+        @apply m-0 text-lg font-sans leading-normal;
     }
     .event p {
         @apply m-0;
     }
     .event .event-point {
-        @apply h-point w-point rounded-full bg-secondary absolute left-0 top-0 ml-time-inset mt-1;
+        @apply h-point w-point rounded-full bg-secondary absolute left-0 top-0 ml-time-inset mt-2;
     }
     .year-event .event-point {
         @apply h-point w-point bg-secondary absolute left-0 top-0 ml-time-inset mt-2;
