--- a/styles/global.css
+++ b/styles/global.css
@@ -46,7 +46,7 @@
         @apply flex justify-between items-center mb-16;
     }
     .frontmatter p {
-        @apply text-base text-gray-700 ml-2 mb-0;
+        @apply text-sm text-gray-700 ml-2 mb-0;
     }
     .time-line {
         @apply w-48px flex-none justify-center;
